@@ -32,6 +32,7 @@
 #include "opj_config.h"
 #include "openjpeg.h"
 #include "j2k_lib.h"
+#include "cio.h"
 #include "j2k.h"
 #include "jp2.h"
 #include "mj2.h"
